fix: tabs spacing

--- a/src/App/Shell/Components/Tabs.razor.css
+++ b/src/App/Shell/Components/Tabs.razor.css
@@ -16,6 +16,7 @@
 }
 
 .tabs-content {
+    padding: var(--spacing-double);
     border-left: var(--base-border);
     flex: 1;
 }
